@@ -8,9 +8,9 @@ COPY --chown=daqqer:daqqer ./ /app/
 
 # Setup environment variables
 # When updating AAVS_SYSTEM_SHA, also update aavs_system in pyproject.toml
-ENV AAVS_SYSTEM_SHA=74c03585a3ba7bdbfd259f044b0d8a7f77951c96
+ENV AAVS_SYSTEM_SHA=4fd6ff7f78697bb48fcb80c06e5638daf5db8b6e
 ENV AAVS_DAQ_SHA=65c8339543ff94818ccc9335583168c9b7f877f4
-ENV PYFABIL_SHA=c5e10ffde94b656e5d4439803916d50972052e42
+ENV PYFABIL_SHA=44705affebc0bcd689902da58471fb81fad0d779
 ENV DEBIAN_FRONTEND=noninteractive
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
