@@ -4,6 +4,7 @@
 
 * [MCCS-1883] Add bandpass monitor labels. Fix attribute size.
 * [MCCS-1885] Introduce `cadence` as an argument to bandpass monitor.
+* [MCCS-2046] Update Pyfabil and AAVS-System references.
 
 ## 0.6.1
 
